# Automation-read-invoices

./: .gitignore  Business Understanding.md  LICENSE  Macro-activities.md  README.md  pyproject.toml  report_1.xml
invoice-reader/: pyproject.toml
src/: gcp.py  main.py  test.py  teste.py
tests/: test_extracao.py  test_regex.py  test_uploadgccp.py
