[tool.poetry]
name = "automation-read-invoices"
version = "0.1.0"
description = ""
authors = ["Camila Caldas  <camisccb@gmail.com>"]
readme = "README.md"
packages = [{include = "automation_read_invoices"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
python-telegram-bot = "^13.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
