[tool.poetry]
name = "invoice-reader"
version = "0.1.0"
description = ""
authors = ["Camila Caldas  <camisccb@gmail.com>"]
readme = "README.md"
packages = [{include = "invoice_reader"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
